--- a/content/post/2019-09-26-japanese-airlines-and-efficient-code-collaboration.Rmd
+++ b/content/post/2019-09-26-japanese-airlines-and-efficient-code-collaboration.Rmd
@@ -12,6 +12,4 @@ tags:
   - collaboration
 ---
 
-
-
-The focus of this article is on 
+Japanese airlines were known to have relatively poor safety record.
